--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <html>
 <body>
-<a href="https://www.accuweather.com/en/us/jefferson-me/04348/current-weather/2183266" class="aw-widget-legal">
-<!--
-By accessing and/or using this code snippet, you agree to AccuWeather’s terms and conditions (in English) which can be found at https://www.accuweather.com/en/free-weather-widgets/terms and AccuWeather’s Privacy Statement (in English) which can be found at https://www.accuweather.com/en/privacy.
--->
-</a>
-<div id="awtd1506881951048" class="aw-widget-36hour"  data-locationkey="2183266" data-unit="f" data-language="en-us" data-useip="false" data-uid="awtd1506881951048" data-editlocation="false"></div><script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script>
-</body>
+<div style="width: 850px;"><iframe style="display: block;" src="https://cdnres.willyweather.com/widget/loadView.html?id=73033" width="850" height="92" frameborder="0" scrolling="no"></iframe><a style="position: relative;width: 20px;float: right;height: 92px;text-indent: -9999em;z-index: 1;margin: -92px 0 0 0" href="http://www.willyweather.com/me/lincoln-county/jefferson.html" rel="nofollow">jefferson weather forecast</a></div>
+ </body>
 </html>
